<resources>
    <string name="app_name">RatingApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Display">Instructor List</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="office">Office</string>
    <string name="phone">Phone</string>
    <string name="email">Email-Id</string>
    <string name="rating">Rating</string>
    <string name="average">Average Rating</string>
    <string name="tRating">Total Ratings</string>
    <string name="title_activity_instructor_details">Instructor Details</string>
    <string name="add_comment">Post Comment</string>
    <string name="rate_btn">Add Rating</string>
    <string name="comment_btn">See Comments</string>
    <string name="title_activity_comment">Comments</string>
    <string name="set_button">Add Rating</string>
    <string name="cancel_button">Cancel</string>
    

    <string-array name="Ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
