
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#862929"
    tools:context="com.example.priya_000.ratingapp.InstructorDetails">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="17sp"
        android:background="#1A0501"
        android:textColor="#FFFFFF"
        android:id="@+id/profName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="340dp"
        android:layout_below="@+id/profName"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="40dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="2dp"
                android:background="#1A0501"
                android:textColor="#FFFFFF"
                android:layout_span="1"
                android:textSize="17sp"
                android:text="@string/fName"
                android:id="@+id/fName"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_span="1"
                android:padding="5dp"
                android:textColor="#FAE7AA"
                android:textSize="17sp"
                android:id="@+id/profFName"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_span="1"
                android:background="#1A0501"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/lName"
                android:id="@+id/lName"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_span="1"
                android:padding="5dp"
                android:textSize="17sp"
                android:textColor="#FAE7AA"
                android:id="@+id/profLName"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_span="1"
                android:background="#1A0501"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/office"
                android:id="@+id/office"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_span="1"
                android:padding="5dp"
                android:textColor="#FAE7AA"
                android:textSize="17sp"
                android:id="@+id/office_id"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_span="1"
                android:background="#1A0501"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/phone"
                android:id="@+id/phone"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_span="1"
                android:padding="5dp"
                android:textColor="#FAE7AA"
                android:textSize="17sp"
                android:id="@+id/phone_id"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_span="1"
                android:background="#1A0501"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/email"
                android:id="@+id/email"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_span="1"
                android:padding="5dp"
                android:textColor="#FAE7AA"
                android:textSize="17sp"
                android:id="@+id/email_id"
                android:layout_column="1" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_span="1"
                android:background="#1A0501"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/average"
                android:id="@+id/average"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_span="1"
                android:padding="5dp"
                android:textColor="#FAE7AA"
                android:textSize="17sp"
                android:id="@+id/average_id"
                android:layout_column="1" />





        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_span="1"
                android:background="#1A0501"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/tRating"
                android:id="@+id/tRating"
                android:layout_column="0" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_span="1"
                android:padding="5dp"
                android:textColor="#FAE7AA"
                android:textSize="17sp"
                android:id="@+id/totalRating_id"
                android:layout_column="1" />

        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/rate_btn"
        android:id="@+id/rate_bt"

        android:background="#1A0501"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="addRating" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_btn"
        android:id="@+id/comment_bt"
        android:background="#1A0501"
        android:textColor="#FFFFFF"
        android:layout_alignTop="@+id/rate_bt"
        android:layout_alignRight="@+id/tableLayout"
        android:layout_alignEnd="@+id/tableLayout"
        android:onClick="seeComments" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/rateText"
        android:layout_alignBottom="@+id/comment_bt"
        android:layout_toLeftOf="@+id/comment_bt"
        android:layout_toStartOf="@+id/comment_bt"
        android:visibility="invisible" />


</RelativeLayout>

